--- a/index.html
+++ b/index.html
@@ -1,7 +1,167 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Open 3D Models</title>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+    <link rel="icon" href="/open3dmodel96x96.ico" sizes="96x96">
+    <link rel="icon" href="/open3dmodel.ico" sizes="48x48">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="wrapper">
+        <header class="header">
+            <section class="header-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
+                            <div class="contact">
+                                <p><span class="email"><a href="#">Email: open3dmodels@gmail.com</a></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="header-bottom">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5 col-sm-12 col-xs-12">
+                            <a href="#">
+                                <div class="main-logo">
+                                    <h2>OPEN 3D MODELS</h2>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-7 col-sm-12 col-xs-12">
+                            <div class="menu">
+                                <ul class="nav navbar-nav">
+                                    <li class="active"><a href="#">HOME</a></li>
+                                    <li><a href="#">ACTIVITY</a></li>
+                                    <li><a href="#">ABOUT US</a></li>
+                                    <li><a href="#">CONTACT</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </header>
+        <section class="carosal-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="client owl-carousel owl-theme">
+                            <div class="item">
+                                <div class="text">
+                                    <h3>LEARN HOW TO CREATE 3D HUMANOID MODELS</h3>
+                                    <p>Learn the skill to create your own 3D models and share with others</p>
+                                    <h5 class="white-button"><a href="#">COMING SOON</a></h5>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="text">
+                                    <h3>DOWNLOAD 3D MODELS</h3>
+                                    <p>We have all kinds of 3d humanoid models, from different places, different times, and different cultures.</p>
+                                    <h5 class="white-button"><a href="#">COMING SOON</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our_activity">
+            <h2>OUR ACTIVITY</h2>
+            <p>We have a 3d model asset repository that contains all kinds of humanoid models, such as middle age farmers, soliders, Roman Senators, and more.</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-xs-12">
+                        <div class="single-Promo">
+                            <div class="promo-icon">
+                                <i class="material-icons">near_me</i>
+                            </div>
+                            <h2><a href="#">Learn</a></h2>
+                            <p>Read and view our learning materials, and you will start building 3D models.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-xs-12">
+                        <div class="single-Promo">
+                            <div class="promo-icon">
+                                <i class="material-icons">favorite</i>
+                            </div>
+                            <h2><a href="#">Build</a></h2>
+                            <p>Use different tools build 3D assets.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-xs-12">
+                        <div class="single-Promo">
+                            <div class="promo-icon">
+                                <i class="material-icons">dashboard</i>
+                            </div>
+                            <h2><a href="#">Share</a></h2>
+                            <p>Upload assets to the repository and download assets from the repository.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-8">
+                        <div class="row">
+
+                            <div class="col-md-4 col-sm-4">
+                                <div class="footer-text one">
+                                    <h3>CONTACT US</h3>
+                                    <ul>
+                                        <li><a href="#"><i class="material-icons">location_on</i>UNION CITY, CA, USA</a></li>
+                                        <li><a href="#"><i class="material-icons">email</i>open3dmodels@gmail.com</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <p>Copyright @ 2021 <a href="#">Open 3D Models</a> | All Rights Reserved </p>
+            </div>
+        </footer>
+    </div>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/animationCounter.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/active.js"></script>
+
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-36251023-1']);
+        _gaq.push(['_setDomainName', 'jqueryscript.net']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </body>
+
 </html>
